[tool.poetry]
name = "mockeval"
version = "0"
description = "Cursed lambdas because yes"
authors = ["CircuitSacul <circuitsacul@gmail.com>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
