[tool.poetry]
name = "mockeval"
version = "0"
description = "Cursed lambdas because yes"
authors = ["CircuitSacul <circuitsacul@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = ">=0.0.272,<0.0.285"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79

[tool.ruff]
extend-select=[
    # isort
    "I001"
]
